# 17-digital-twin-simulation-lab

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  SPECIFICATION.md  apply-progress.md  docker-compose.simulation.yml  fly.toml  pyproject.toml  strict-tdd.md  tasks.md
.atl/: skill-registry.md
.engram/: config.json
.github/workflows/: ci.yml  security-scan.yml
apps/scenario-editor/: README.md
apps/simulation-dashboard/: README.md
data-contracts/: lap-prediction.schema.yaml  setup-variant.schema.yaml  simulation-result.schema.yaml  simulation-scenario.schema.yaml  tire-model.schema.yaml
domain/aero/: README.md
domain/circuit/: README.md
domain/engine-map/: README.md
domain/motorcycle/: README.md
domain/rider/: README.md
domain/scenario/: README.md
domain/suspension/: README.md
domain/tire/: README.md
integrations/mcp-client/: README.md
integrations/minio-client/: README.md
integrations/race-ai-copilot-client/: README.md
integrations/race-command-center-client/: README.md
integrations/rag-cag-client/: README.md
integrations/telemetry-client/: README.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  scenario-runner-deployment.yaml  service.yaml  simulation-api-deployment.yaml
models/kalman/: README.md
models/mpc/: README.md
models/rnn-pinn/: README.md
models/surrogate-models/: README.md
models/thermal-models/: README.md
models/tire-degradation/: README.md
models/vehicle-dynamics/: README.md
reports/templates/: simulation-report.md
scenarios/race/: qatar-race-l10-map2-rebound.yaml
services/aero-balance-simulator/: README.md
services/engine-map-simulator/: README.md
services/lap-time-estimator/: README.md
services/scenario-runner/: README.md
services/simulation-api/: README.md
services/suspension-response-simulator/: README.md
services/tire-thermal-simulator/: README.md
services/what-if-analysis-service/: README.md
src/digital_twin_lab/: __init__.py  auth_deps.py  config.py  constants.py  database.py  main.py  rate_limit.py
src/digital_twin_simulation_lab/: __init__.py  domain.py  scenario_runner.py
tests/: conftest.py
tests/integration/: test_api.py
tests/simulation/: test_scenario_runner.py
tests/unit/: test_fea_model.py  test_pacejka_model.py  test_pressure_sweep.py  (+5 more)
workflows/: compare-engine-maps.workflow.yaml  evaluate-circuit-part.workflow.yaml  generate-simulation-report.workflow.yaml  run-setup-what-if.workflow.yaml  simulate-tire-collapse.workflow.yaml
(+145 files in other folders)
